telaLogin|telaCadastro|navegação entre elas

--- a/WEB/View/Pages/Feed.html
+++ b/WEB/View/Pages/Feed.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,15 +11,16 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../../Public/CSS/Feed.css">
 </head>
+
 <body>
     <nav>
         <div class="container">
             <h2 class="logo">
-                <img src="../../Public/Image/logo-1.jpg.png"> 
+                <img src="../../Public/Image/logo.ofc-removebg-preview (1).png" alt="" srcset="">
             </h2>
             <div class="search-bar">
                 <i class="uil uil-search"></i>
-                <input type="search" placeholder="Search for creators, inspirations, and projects">
+                <input type="search" placeholder="Procure usuarios, inspirações e doações">
             </div>
             <div class="create">
                 <label class="btn btn-primary" for="create-post">Criar</label>
@@ -50,13 +52,13 @@
                 <div class="sidebar">
                     <a class="menu-item active">
                         <span><i class="uil uil-home"></i></span>
-                        <h3>Home</h3>   
+                        <h3>Home</h3>
                     </a>
                     <a class="menu-item">
                         <span><i class="uil uil-compass"></i></span>
                         <h3>Mural</h3>
                     </a>
-                    <a class="menu-item"  id="notifications">
+                    <a class="menu-item" id="notifications">
                         <span><i class="uil uil-bell"><small class="notification-count">9+</small></i></span>
                         <h3>Notificação</h3>
                         <!--------------- NOTIFICATION POPUP --------------->
@@ -124,7 +126,7 @@
                     </a>
                     <a class="menu-item">
                         <span><i class="uil uil-bookmark"></i></span>
-                        <h3>Pets adotados</h3>
+                        <h3>Adotar</h3>
                     </a>
                     <!-- <a class="menu-item">
                         <span><i class="uil uil-chart-line"></i></span>
@@ -145,7 +147,7 @@
 
             <!----------------- MIDDLE -------------------->
             <div class="middle">
-                 <!----------------- STORIES -------------------->
+                <!----------------- STORIES -------------------->
                 <!-- <div class="stories">
                     <div class="story">
                         <div class="profile-photo">
@@ -190,7 +192,7 @@
                         <img src="./images/profile-1.jpg">
                     </div>
                     <input type="text" placeholder="O que está pensando?" id="create-post">
-                    <input type="submit" value="Post" class="btn btn-primary">
+                    <input type="submit" value="Postar" class="btn btn-primary">
                 </form>
                 <!----------------- FEEDS -------------------->
                 <div class="feeds">
@@ -235,7 +237,8 @@
 
                         <div class="caption">
                             <p><b>Lana Rose</b> Adotar Neli foi minha melhor escolha!
-                            <span class="harsh-tag">#patinhasdobem</span></p>
+                                <span class="harsh-tag">#patinhasdobem</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -284,8 +287,13 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Clara Dwayne</b> Olá, pessoal! Este é o Max, um amiguinho muito especial que está à procura de um novo lar cheio de amor. Ele é carinhoso, brincalhão e se dá super bem com crianças, como vocês podem ver na foto com a pequena Sofia. Max já está vacinado, vermifugado e pronto para encontrar uma nova família para compartilhar momentos incríveis. Se você tem espaço no coração e na casa para esse fofinho, entre em contato!
-                            <span class="harsh-tag">#doandoporamor</span></p>
+                            <p><b>Clara Dwayne</b> Olá, pessoal! Este é o Max, um amiguinho muito especial que está à
+                                procura de um novo lar cheio de amor. Ele é carinhoso, brincalhão e se dá super bem com
+                                crianças, como vocês podem ver na foto com a pequena Sofia. Max já está vacinado,
+                                vermifugado e pronto para encontrar uma nova família para compartilhar momentos
+                                incríveis. Se você tem espaço no coração e na casa para esse fofinho, entre em contato!
+                                <span class="harsh-tag">#doandoporamor</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -334,8 +342,10 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Rosalinda Clark</b> Novo membro da família! 🐾 Adotei esse fofinho hoje e já estou apaixonada. Não há amor maior do que o de um pet resgatado.
-                            <span class="harsh-tag">#AdoçãoÉAmor #NovoAmigo</span></p>
+                            <p><b>Rosalinda Clark</b> Novo membro da família! 🐾 Adotei esse fofinho hoje e já estou
+                                apaixonada. Não há amor maior do que o de um pet resgatado.
+                                <span class="harsh-tag">#AdoçãoÉAmor #NovoAmigo</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -384,8 +394,10 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Alexandria Riana</b> Melhores amigos para a vida toda! 🐶💛 Nada como a alegria de uma criança e seu cãozinho brincando juntos.
-                            <span class="harsh-tag">#AmizadePura #CompanheirosFiéis</span></p>
+                            <p><b>Alexandria Riana</b> Melhores amigos para a vida toda! 🐶💛 Nada como a alegria de uma
+                                criança e seu cãozinho brincando juntos.
+                                <span class="harsh-tag">#AmizadePura #CompanheirosFiéis</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -434,7 +446,9 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Keylie Hadid</b> Este adorável hamster está à procura de um novo lar! 🐹💕 Ele é super fofo e adora petiscar. Se você quer um companheiro pequeno e divertido, entre em contato para adotá-lo!
+                            <p><b>Keylie Hadid</b> Este adorável hamster está à procura de um novo lar! 🐹💕 Ele é super
+                                fofo e adora petiscar. Se você quer um companheiro pequeno e divertido, entre em contato
+                                para adotá-lo!
                         </div>
 
                         <div class="comments text-muted">
@@ -483,8 +497,10 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Benjamin Dwayne</b> Um abraço quentinho e cheio de amor! 🐰💖 Esta fofura está à procura de um lar carinhoso. Adotar é sempre uma boa ideia! 
-                            <span class="harsh-tag">#AdoçãoResponsável #AmorEmDobro</span></p>
+                            <p><b>Benjamin Dwayne</b> Um abraço quentinho e cheio de amor! 🐰💖 Esta fofura está à
+                                procura de um lar carinhoso. Adotar é sempre uma boa ideia!
+                                <span class="harsh-tag">#AdoçãoResponsável #AmorEmDobro</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -533,8 +549,11 @@
                         </div>
 
                         <div class="caption">
-                            <p><b>Indiana Ellison</b> Apresentando esta bolinha de fofura! 🐇✨ Este coelhinho está pronto para encontrar uma nova família que lhe dê muito amor e carinho. Vamos espalhar a alegria da adoção!
-                            <span class="harsh-tag">#AdoçãoÉAmor #Fofura</span></p>
+                            <p><b>Indiana Ellison</b> Apresentando esta bolinha de fofura! 🐇✨ Este coelhinho está
+                                pronto para encontrar uma nova família que lhe dê muito amor e carinho. Vamos espalhar a
+                                alegria da adoção!
+                                <span class="harsh-tag">#AdoçãoÉAmor #Fofura</span>
+                            </p>
                         </div>
 
                         <div class="comments text-muted">
@@ -545,7 +564,7 @@
                 </div>
                 <!----------------- END OF FEEDS -------------------->
             </div>
-             <!----------------- END OF MIDDLE -------------------->
+            <!----------------- END OF MIDDLE -------------------->
 
             <!----------------- RIGHT -------------------->
             <div class="right">
@@ -558,7 +577,7 @@
                     <!------- SEARCH BAR ------->
                     <div class="search-bar">
                         <i class="uil uil-search"></i>
-                        <input type="search" placeholder="Search messages" id="message-search">
+                        <input type="search" placeholder="Pesquisar mensagens" id="message-search">
                     </div>
                     <!------- MESSAGES CATEGORY ------->
                     <div class="category">
@@ -754,4 +773,5 @@
 
     <script src="../../Public/JavaScript/Feed.js"></script>
 </body>
+
 </html>
