--- a/WEB/View/Pages/Login.html
+++ b/WEB/View/Pages/Login.html
@@ -152,7 +152,7 @@
 
     <!----------------------------------- IMAGEM DE FUNDO DA TELA ------------------------------------------------>
     <div>
-        <img src="../../Public/Image/telaCadastro.png" class="img" width="100%" style="margin-left: -0%; margin-top: -400%; display:flexbox;"
+        <img src="../../Public/Image/Design sem nome (5).png" class="img" width="100%" style="margin-left: -0%; margin-top: -400%; display:flexbox;"
             srcset="">
     </div>
     <!----------------------------------- FINAL DA IMAGEM DE FUNDO DA TELA ------------------------------------------------>
